--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
 }
 h1 {
   font-size: 76px;
-  padding-top: 170px;
+  padding-top: 190px;
   margin: 0;
 
 }
@@ -30,6 +30,23 @@ h1 {
 }
 .icon {
   list-style: none;
+  display: inline-block;
+  float: left;
+}
+.icon div {
+  position: relative;
+  padding: 0 0 45px 5px;
+  vertical-align: top;
+  display: inline-block;
+  vertical-align: middle;
+}
+.icon > a {
+  display: inline-block;
+  height: 53px;
+  margin: 5px 0 0 130px;
+}
+.nav-bar {
+  margin: 0;
 }
 h3 {
   position: relative;
@@ -40,4 +57,6 @@ h3 {
 }
 h4 {
   margin: 0;
+  font-size: 11px;
+
 }
